# ji

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md
docs/: README_CN.md  architecture.md  cli.md  troubleshooting.md
docs/release/: 26.5.1.md  26.5.2.md
scripts/: pre-commit  sync-agents.sh
src/: error.rs  main.rs
src/archive/: format.rs  mod.rs
src/commands/: add.rs  check.rs  completion.rs  diff.rs  doctor.rs  init.rs  list.rs  mod.rs  pack.rs  pull.rs  push.rs  recipient.rs  remote.rs  rm.rs  status.rs  sync.rs  unpack.rs
src/crypto/: age.rs  mod.rs  pgp.rs
src/remote/: mod.rs  ssh.rs  webdav.rs
src/store/: config.rs  ignore.rs  manifest.rs  mod.rs  path.rs
