[package]
name = "ji"
version = "26.5.1"
edition = "2024"

[dependencies]
age = { version = "0.11.3", features = ["ssh"] }
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
glob = "0.3.3"
hex = "0.4.3"
hmac = "0.13.0"
hostname = "0.4.2"
reqwest = { version = "0.13.3", features = ["blocking"] }
rpassword = "7.5.1"
sequoia-openpgp = { version = "2.2.0", optional = true, features = ["crypto-rust", "compression-deflate"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
similar = "3.1.0"
tar = "0.4.45"
thiserror = "2.0.18"
toml = "1.1.2"
walkdir = "2.5.0"
zstd = "0.13.3"

[dev-dependencies]
tempfile = "3.27.0"

[features]
default = []
pgp = ["dep:sequoia-openpgp"]
ssh = []
