[package]
name = "ji-cli"
version = "26.5.2"
edition = "2024"
authors = ["ltpenguin <littlepenguinzq@gmail.com>"]
description = "Encrypt dotfiles into a single .ji file for safe cross-device migration"
repository = "https://github.com/littlepenguin66/ji"
license = "AGPL-3.0"
keywords = ["cli", "dotfiles", "encryption", "age", "backup"]
readme = "README.md"

[[bin]]
name = "ji"
path = "src/main.rs"

[dependencies]
age = { version = "0.11.3", features = ["ssh"] }
chrono = "0.4.44"
clap = { version = "4.6.1", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
clap_complete = "4.6.5"
dirs = "6.0.0"
glob = "0.3.3"
hex = "0.4.3"
hmac = "0.13.0"
hostname = "0.4.2"
reqwest = { version = "0.13.3", features = ["blocking"] }
rpassword = "7.5.1"
sequoia-openpgp = { version = "2.2.0", optional = true, features = ["crypto-rust", "compression-deflate"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
similar = "3.1.0"
tar = "0.4.45"
thiserror = "2.0.18"
toml = "1.1.2"
walkdir = "2.5.0"
zstd = "0.13.3"

[dev-dependencies]
tempfile = "3.27.0"

[features]
default = []
pgp = ["dep:sequoia-openpgp"]
ssh = []

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
